<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arkaplan"
    tools:context=".sfrdgrActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:src="@drawable/passdgr" />

        <EditText
            android:id="@+id/etsfr1"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:background="@drawable/textarkaplan"
            android:hint="@string/eskisfr"
            android:importantForAutofill="no"
            android:layout_marginBottom="25dp"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:padding="10dp"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etsfr2"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:background="@drawable/textarkaplan"
            android:hint="@string/sifre"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:padding="10dp"
            android:textColorHint="#78909C"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etsfr3"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:background="@drawable/textarkaplan"
            android:hint="@string/resifre"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:padding="10dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/btnsfr"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/butonarkaplan"
            android:text="@string/sfdgr" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>