<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arkaplan"
    tools:context=".profilFragment">

    <ImageView
        android:id="@+id/ivprofil"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/kullanicilogo"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usertxt"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:text="@string/tanim"
        android:gravity="center_vertical"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivprofil"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usertxt">



            <TableRow
                android:id="@+id/tbls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/butonarkaplan"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/sfr1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/sifredgr"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sfr2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/sfr"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="end"/>
            </TableRow>
        <TableRow
            android:id="@+id/tblt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/butonarkaplan"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/tl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/teldgr"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/sfr"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="end"/>
        </TableRow>
        <TableRow
            android:id="@+id/tblm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/butonarkaplan"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/ml1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ml2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/sfr"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="end"/>
        </TableRow>
        <TableRow
            android:id="@+id/tblc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/butonarkaplan"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/cks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/cikisyap"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>


        </TableRow>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>